--- a/nginx.conf
+++ b/nginx.conf
@@ -66,15 +66,30 @@ http {
         }
 
 	location /vmess {
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header Host $http_host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header Range $http_range;
-        proxy_set_header If-Range $http_if_range; 
-        proxy_redirect off;
-        proxy_pass http://127.0.0.1:2054;
-        }
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_set_header Host $http_host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header Range $http_range;
+    proxy_set_header If-Range $http_if_range;
+
+    proxy_intercept_errors on; # Crucial for catching errors
+    recursive_error_pages on;
+    proxy_redirect off;
+
+     # Try to proxy to the service.  If it fails (because the service is down),
+     # serve a 200 OK response
+    try_files @vmess_backend @vmess_unavailable;
+
+
+    location @vmess_backend {
+          proxy_pass http://127.0.0.1:2054;
+    }
+
+    location @vmess_unavailable {
+          return 200 "pls wait"; # Or a custom HTML page
+    }
+}
 
 		location /outtwo {
 			proxy_redirect off;
